--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Change or remove this page</h1>
         <p>eat my shorts</p>
+        <p>hvorfor virker du ikke</p>
     </body>
 </html>
